# MechDrawKit

./: .gitignore  AI自主重构执行方案.md  Makefile  README.md  drawing_tools.py  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  universal_table_methods.py
mechdrawkit/: __init__.py  drawing_tools.py
mechdrawkit/config/: __init__.py  gb_standards.json  gb_standards.py
mechdrawkit/core/: __init__.py  adapters.py  factory.py  templates.py
mechdrawkit/core/strategies/: __init__.py  base.py  basic_shapes.py  dimensions.py  symbols.py  views.py
mechdrawkit/tools/: __init__.py  table_methods.py
output/: demo1_backward_compatibility.dxf  demo2_new_architecture.dxf  demo3_gear_template.dxf  demo3_shaft_template.dxf  demo4_mixed_usage.dxf
templates/: A0_Template.dxf  A2_Template.dxf  A3_Template.dxf
